# spectrometer_mcp

./: README.md  pyproject.toml  sample1.csv  sample2.csv  server.py
src/spectrometer_mcp/: __init__.py  core.py  server.py
tests/: test_core.py  test_server.py
tests/fixtures/: db.csv
